chore: simplify require impl